--- a/art.html
+++ b/art.html
@@ -114,7 +114,7 @@ div.date {
 <div class="img img-d-0 date"> 2019: </div>
 
 <div class="img img-d-0" align=left>
-	<A HREF="https://filosofisksupplement.no/beginners-guide-to-kants-aesthetics/" target="_blank"> Beginner&rsquo;s Guide to Kant&rsquo;s Aesthetics </A>
+	<A HREF="https://filosofisksupplement.no/magazines/2019/5?page=14" target="_blank"> Beginner&rsquo;s Guide to Kant&rsquo;s Aesthetics </A>
 </div>
 <hr>
 <!-- 2018 -->
